<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".LanguageActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="4dp">

        <ImageButton
            android:id="@+id/btn_america"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="4dp"
            android:background="@color/transparent"
            android:contentDescription="@string/english"
            android:scaleType="fitCenter"
            android:src="@mipmap/ic_eng" />

        <ImageButton
            android:id="@+id/btn_japan"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="4dp"
            android:background="@color/transparent"
            android:contentDescription="@string/japan"
            android:scaleType="fitCenter"
            android:src="@mipmap/ic_jap" />

        <ImageButton
            android:id="@+id/btn_thai"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="4dp"
            android:background="@color/transparent"
            android:contentDescription="@string/thai"
            android:scaleType="fitCenter"
            android:src="@mipmap/ic_thai" />

    </LinearLayout>

</LinearLayout>